fixed weird hyperlink formatting on mobile

--- a/style.css
+++ b/style.css
@@ -234,6 +234,16 @@ nav a:hover {
     margin-bottom: 5px;
 }
 
+.portdesc a {
+    color: white;
+    font-size: 10px;
+    font-family: Arial, Helvetica, sans-serif;
+    margin: auto;
+    margin-left: 25px;
+    margin-bottom: 5px;
+    text-align: left;
+}
+
 .portdesc p {
     margin-left: 25px;
     text-align: left;
